imagen agregada por si no carga el video

--- a/relaxer/style.css
+++ b/relaxer/style.css
@@ -14,15 +14,16 @@ header {
 
 
 .fullscreen-bg {
-    width: 100%;
-    overflow: hidden;
-    z-index: -100;
-    background-color: black;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    height: calc(80vw * 9 / 16 + 5px);
+  background-color: black;
+  width: 100%;
+  overflow: hidden;
+  z-index: -100;
+  background-color: black;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  height: calc(80vw * 9 / 16 + 5px);
 
 
 }
@@ -64,7 +65,7 @@ header {
 }
 
 .title span{
-  animation: appear 11s;
+  animation: appearr 4s infinite;
 }
 
 .content {
@@ -77,6 +78,7 @@ header {
   font-weight: 600;
   margin-bottom: 100px;
 }
+
 
 
 .autor {
@@ -110,5 +112,17 @@ footer {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes appearr {
+  0% {
+    opacity: 0;
+  }
+  65% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
