mejorado aun mas

--- a/style.css
+++ b/style.css
@@ -6,7 +6,39 @@ body {
 
 header {
 	height: 80px;
+	color: black;
+	position: relative;
+}
 
+
+header nav {
+	display: inline-block;
+	position: absolute;
+	right: 10px;
+}
+
+header nav ul {
+	display: flex;
+	list-style-type: none;
+}
+
+header nav ul li {
+	font-size: 22px;
+	line-height: 40px;
+	padding-right: 15px;
+}
+
+header nav a {
+	text-decoration: none;
+	color: black;
+}
+
+footer {
+	height: 200px;
+	background-color: black;
+	color: white;
+	display: flex;
+	align-items: center;
 }
 
 .dp {
@@ -41,4 +73,50 @@ header {
 	height: 600px;
 	display: flex;
 	justify-content: flex-end;
+}
+
+.contenido {
+	height: 800px;
+	font-size: 40px;
+}
+
+
+.qo {
+	width: 60%;
+	margin: auto;
+	text-align: center;
+	border-top: 2px solid grey;
+}
+
+
+
+
+
+
+/*footer social*/
+.social1 {
+	height: 100px;
+	margin-right: 50px;
+	margin-left: 50px; 
+	transition: .6s;
+}
+.social2 {
+	height: 120px;
+	transition: .6s;
+}
+
+.social1:hover {
+	height: 72px;
+	margin-right: 64px;
+	margin-left: 64px;
+}
+.social2:hover {
+	height: 92px;
+}
+
+
+
+
+header nav ul li:hover {
+	text-decoration: underline;
 }
