--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ footer {
 	text-align: center;
 	display: flex;
 	flex-direction: column;
+	animation: appear 4s;
 }
 
 .dest {
@@ -59,6 +60,10 @@ footer {
 .dp h1 {
 	font-size: 31px;
 }
+/* poner esto para el responsive en celulares
+.dp p {
+	font-size: 17px;
+}*/
 
 .logo {
 	margin-top: 12px;
@@ -72,7 +77,7 @@ footer {
 	background-position: left bottom;
 
 	background-repeat: no-repeat;
-	height: 600px;
+	height: 80vh;
 	display: flex;
 	justify-content: flex-end;
 }
@@ -121,4 +126,13 @@ footer {
 
 header nav ul li:hover {
 	text-decoration: underline;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
