--- a/style.css
+++ b/style.css
@@ -123,10 +123,14 @@ footer div {
 
 /*footer social*/
 
-.social
+.social div {
+	height: 120px;
+}
 
 .social1 {
 	height: 100px;
+	margin-top: 10px;
+	margin-bottom: 10px ;
 	margin-right: 50px;
 	margin-left: 50px; 
 	transition: .6s;
@@ -143,6 +147,7 @@ footer div {
 }
 .social2:hover {
 	height: 92px;
+
 }
 
 
