--- a/relaxer/style.css
+++ b/relaxer/style.css
@@ -132,34 +132,60 @@ header {
 }
 
 footer {
-  height: 200px;
   background-color: black;
   color: white;
   display: flex;
   align-items: center;
+  display: flex;
+  justify-content: space-around;
+  padding: 20px 5px;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+
+
+footer div {
+  margin: 0;
+  width: 250px;
 }
 
 /*footer social*/
+
+.social {
+  height: 120px;
+  display: flex;
+  justify-content: space-between;
+
+}
+
 .social1 {
+  margin-top: 5px;
   height: 100px;
-  margin-right: 50px;
-  margin-left: 50px; 
-  transition: .6s;
+
 }
 .social2 {
   height: 120px;
-  transition: .6s;
 }
 
-.social1:hover {
-  height: 72px;
-  margin-right: 64px;
-  margin-left: 64px;
+.equipo{
+  text-align: center;
+}
 
+.equipo img {
+  border-radius: 50%;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-.social2:hover {
-  height: 92px;
+
+.contacto a {
+  font-size: 21px;
 }
+
+
+
 
 
 .hdr nav ul li:hover {
