--- a/kasabian/style.css
+++ b/kasabian/style.css
@@ -45,10 +45,12 @@ header nav a {
 h1{
 	font-family: 'Raleway';
 	font-weight: 200;
-	font-size: 80px;
+	font-size: 5vw;
 	display: flex;
-	color: white;
+	color: black;
 	margin: 0;
+	margin-top: 400px;
+	margin-left: 100px;
 }
 
 picture {
@@ -60,7 +62,8 @@ picture {
 
 .bgt{
 	background-image: url(img/bg.jpg);
-	background-size: cover;
+	background-size: cover; 
+	background-position: center center;
 	height: 500px;
 	display: flex;
 	justify-content: center;
@@ -141,6 +144,7 @@ footer div {
   font-size: 20px;
   border-top: 2px solid grey;
   margin-bottom: 60px;
+  color: black;
 }
 
 .autor article {
