--- a/style.css
+++ b/style.css
@@ -472,18 +472,18 @@ footer div {
 
 .maspost {
 	border-radius: 10px;
-	width: 300px;
+	width: 500px;
 	background-color: black;
 	color: white;
-	transform: translate(-60px , -60px);
+	transform: translate(-260px , -40px);
 	text-align: end;
 	padding: 5px;
-	transition: 0.4s ease;
+	transition: 0.3s;
 }
 
 .maspost:hover {
 
-	transform: translate(-44px , -60px);
+	transform: translate(-180px , -40px);
 }
 
 
