--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ footer {
 	display: flex;
 	justify-content: space-around;
 	padding: 20px 5px;
+	flex-wrap: wrap;
 }
 
 footer a {
@@ -115,7 +116,7 @@ footer div {
 	width: 60%;
 	margin: auto;
 	text-align: center;
-	border-top: 2px solid grey;
+	border-top: 2px solid black;
 }
 
 
@@ -374,7 +375,7 @@ footer div {
 
 .bot {
 	display: flex;
-	margin-top: 60px;
+	margin-top: 90px;
 	justify-content: space-around;
 	flex-wrap: wrap;
 }
@@ -473,6 +474,8 @@ footer div {
 
 .equipo{
 	text-align: center;
+	margin-top: 30px;
+	margin-bottom: 10px;
 }
 
 .equipo img {
@@ -481,6 +484,10 @@ footer div {
 	margin-right: 10px;
 }
 
+.contacto {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
 
 
 .contacto a {
@@ -505,7 +512,6 @@ footer div {
 	transition: 0.3s;
 	font-size: 20px;
 	margin: auto;
-	border: solid black 1px 1px 0 1px;
 }
 
 .maspost:hover {
